--- a/main.css
+++ b/main.css
@@ -1,10 +1,5 @@
 :root{
-    --primary-text-color:#212121;
-    --secondary-text-color: #757575;
-    --logo-color: #000;
-    --accent-color: #2196F3;
-    --background-color: #fff;
-    --hero-backround-color: #2F303A;
+     --primary-text-color:#212121; --secondary-text-color: #757575; --logo-color: #000; --accent-color: #2196F3; --background-color: #fff; --hero-background-color:#2F303A; 
 }
 body{
     font-family: "Roboto", sans-serif;
